--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
-    />
+		/>
+		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/53c96baea8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/stylesheets/styles.css" />
   </head>
   <body>
@@ -53,7 +55,42 @@
 		</header>
 		<main>
 			<div class="container-fluid">
-				main content
+				<section class="intro">
+					<div class="hand-container">
+						<img src="assets/images/hand.svg" alt="hand" class="hand">
+					</div>
+					<div class="name-container">
+						<h2 class="name">Jelil Abudu</h2>
+					</div>
+					<div class="background-info">
+						<p>Hello I am a software developer!  I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have project you need coded, don’t hesistate to contact me.</p>
+					</div>
+					<div class="social-network">
+						<h2 class="heading">
+							My works in the social networks
+						</h2>
+						<div class="social-network-nav">
+							<a href="#" class="social-newwork-nav-link">
+								<i class="fab fa-github fa-2x"></i>
+							</a>
+							<a href="#" class="social-newwork-nav-link">
+								<i class="fab fa-twitter fa-2x"></i>
+							</a>
+							<a href="#" class="social-newwork-nav-link">
+								<i class="fab fa-linkedin-in fa-2x"></i>
+							</a>
+							<a href="#" class="social-newwork-nav-link">
+								<i class="fab fa-medium fa-2x"></i>
+							</a>
+							<a href="#" class="social-newwork-nav-link">
+								<i class="fab fa-stack-overflow fa-2x"></i>
+							</a>
+							<a href="#" class="social-newwork-nav-link">
+								<i class="fab fa-facebook fa-2x"></i>
+							</a>
+						</div>
+					</div>
+				</section>
 			</div>
 		</main>
 		<footer>
