Finish the portfolio setion layout

--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
 						</div>
 					</div>
 				</section>
+				<section class="portfolio-section">
+					<h2 class="heading">My Best Works</h2>
+					<div class="portfolio-items-container">
+						<figure>
+							<img class="project-screenshot img-fluid" src="assets/images/project_screenshot.png" alt="project_screenshot">
+							<figcaption class="caption">Caption</figcaption>
+						</figure>
+						<div class="built-tools">
+							<span class="tool">HTML/CSS</span>
+							<span class="tool">Ruby on Rails</span>
+							<span class="tool">JavaScript</span>
+						</div>
+						<button class="see-project-button">See project</button>
+					</div>
+				</section>
 			</div>
 		</main>
 		<footer>
