Add resume section to mobile view

--- a/index.html
+++ b/index.html
@@ -92,19 +92,26 @@
 					</div>
 				</section>
 				<section class="portfolio-section">
-					<h2 class="heading">My Best Works</h2>
-					<div class="portfolio-items-container">
-						<figure>
-							<img class="project-screenshot img-fluid" src="assets/images/project_screenshot.png" alt="project_screenshot">
-							<figcaption class="caption">Caption</figcaption>
-						</figure>
-						<div class="built-tools">
-							<span class="tool">HTML/CSS</span>
-							<span class="tool">Ruby on Rails</span>
-							<span class="tool">JavaScript</span>
+					<div class="portfolio">
+						<h2 class="section-heading">My best works</h2>
+						<div class="portfolio-items-group">
+							<figure>
+								<img class="project-screenshot img-fluid" src="assets/images/project_screenshot.png" alt="project_screenshot">
+								<figcaption class="caption">Caption</figcaption>
+							</figure>
+							<div class="built-tools">
+								<span class="tool">HTML/CSS</span>
+								<span class="tool">Ruby on Rails</span>
+								<span class="tool">JavaScript</span>
+							</div>
+							<button class="see-project-button">See project</button>
 						</div>
-						<button class="see-project-button">See project</button>
 					</div>
+				</section>
+				<section class="about-me">
+					<h2 class="section-heading">About me</h2>
+					<p>In three sentences describe who you are as a proffessional. Look through some of my work and experience! If you like what you see and have project you need coded, don’t hesistate to contact me.</p>
+					<a href="#" class="resume-link">Get resume</a>
 				</section>
 			</div>
 		</main>
