Add skills and tech section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				</section>
 				<section class="portfolio-section">
 					<div class="portfolio">
-						<h2 class="section-heading">My best works</h2>
+						<h2 class="heading section-heading">My best works</h2>
 						<div class="portfolio-items-group">
 							<figure>
 								<img class="project-screenshot img-fluid" src="assets/images/project_screenshot.png" alt="project_screenshot">
@@ -113,13 +113,41 @@
 					<p>In three sentences describe who you are as a proffessional. Look through some of my work and experience! If you like what you see and have project you need coded, don’t hesistate to contact me.</p>
 					<a href="#" class="resume-link">Get resume</a>
 				</section>
+
+				<section class="tech-and-skills">
+					<div class="group">
+						<h2 class="heading">Languages</h2>
+						<div class="stack language-stack">
+							<span class="item">JavaScript(ES5/ES6)</span>
+							<span class="item">Ruby</span>
+							<span class="item">HTML</span>
+							<span class="item">CSS</span>
+						</div>
+					</div>
+					<div class="group">
+						<h2 class="heading">Frameworks</h2>
+						<div class="stack language-stack">
+							<span class="item">Ruby on Rails</span>
+							<span class="item">Bootstrap</span>
+							<span class="item">Flutter</span>
+							<span class="item">RSpec</span>
+							<span class="item">Capybara</span>
+							<span class="item">Solenium</span>
+						</div>
+					</div>
+					<div class="group">
+						<h2 class="heading">Skills</h2>
+						<div class="stack language-stack">
+							<span class="item">Remote collaboration/Pair coding</span>
+							<span class="item">Git</span>
+							<span class="item">GitHub</span>
+							<span class="item">Bash</span>
+						</div>
+					</div>
+				</section>
 			</div>
 		</main>
-		<footer>
-			<div class="container-fluid">
-				footer content
-			</div>
-		</footer>
+		
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
