--- a/index.html
+++ b/index.html
@@ -147,7 +147,35 @@
 				</section>
 			</div>
 		</main>
-		
+		<footer>
+			<div class="container-fluid">
+				<h2 class="heading">Interested in collaborating?</h2>
+				<p>If you have an application you are interested in developing, a feature that you need built or a project that need coding, I’d love to help you with it.</p>
+				<form action="get">
+					<div class="form-group">
+						<input type="text" name="" id="fullName" class="form-control full-name" required placeholder="Full Name*">
+						<div class="invalid-feedback">
+							Please provide your name.
+						</div>
+					</div>
+					<div class="form-group">
+						<input type="email" name="" id="emailAddress" class="form-control email-address" required placeholder="Email*">
+						<div class="invalid-feedback">
+							Please provide your email address.
+						</div>
+					</div>
+					<div class="form-group">
+						<textarea name="" id="message" cols="30" rows="6" class="form-control" placeholder="message*" required></textarea>
+						<div class="invalid-feedback">
+							Please provide your message..
+						</div>
+					</div>
+					<div class="form-group">
+						<button type="submit" class="btn submit-btn btn-block">Get in touch</button>
+					</div>
+				</form>
+			</div>
+		</footer>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
