Add social network links to the footer

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			<div class="container-fluid">
 				<h2 class="heading">Interested in collaborating?</h2>
 				<p>If you have an application you are interested in developing, a feature that you need built or a project that need coding, I’d love to help you with it.</p>
-				<form action="get">
+				<form action="get" class="contact-form">
 					<div class="form-group">
 						<input type="text" name="" id="fullName" class="form-control full-name" required placeholder="Full Name*">
 						<div class="invalid-feedback">
@@ -174,6 +174,37 @@
 						<button type="submit" class="btn submit-btn btn-block">Get in touch</button>
 					</div>
 				</form>
+				<div class="social-network">
+					<address>
+						<a href="mailto:abudujelilfaisal@gmail.com" class="email-address">
+							abudujelilfaisal@gmail.com
+						</a>
+						</address> 
+					<div class="social-network-nav">
+						<a href="#" class="social-newwork-nav-link">
+							<i class="fab fa-github fa-2x"></i>
+						</a>
+						<a href="#" class="social-newwork-nav-link">
+							<i class="fab fa-twitter fa-2x"></i>
+						</a>
+						<a href="#" class="social-newwork-nav-link">
+							<i class="fab fa-linkedin-in fa-2x"></i>
+						</a>
+						<a href="#" class="social-newwork-nav-link">
+							<i class="fab fa-medium fa-2x"></i>
+						</a>
+						<a href="#" class="social-newwork-nav-link">
+							<i class="fab fa-stack-overflow fa-2x"></i>
+						</a>
+						<a href="#" class="social-newwork-nav-link">
+							<i class="fab fa-facebook fa-2x"></i>
+						</a>
+					</div>
+				</div>
+				<small class="copyright">
+					<i class="far fa-copyright"></i>
+					2020 
+				</small>
 			</div>
 		</footer>
 
