--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<p>Hello I am a software developer!  I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have project you need coded, don’t hesistate to contact me.</p>
 					</div>
 					<div class="social-network">
-						<h2 class="heading">
+						<h2 class="heading social-network-heading">
 							My works in the social networks
 						</h2>
 						<div class="social-network-nav">
