--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 		</header>
 		<main>
 			<div class="container-fluid">
-				<section class="intro">
+				<div class="upper-section bg-deco-right">
+					<section class="intro">
 					<div class="hand-container">
 						<img src="assets/images/hand.svg" alt="hand" class="hand">
 					</div>
@@ -90,8 +91,8 @@
 							</a>
 						</div>
 					</div>
-				</section>
-				<section class="portfolio-section">
+					</section>
+					<section class="portfolio-section">
 					<div class="portfolio">
 						<h2 class="heading section-heading">My best works</h2>
 						<div class="portfolio-items-group">
@@ -107,14 +108,15 @@
 							<button class="see-project-button">See project</button>
 						</div>
 					</div>
-				</section>
-				<section class="about-me">
+					</section>
+				</div>
+				<div class="lower-section">
+					<section class="about-me">
 					<h2 class="section-heading">About me</h2>
 					<p>In three sentences describe who you are as a proffessional. Look through some of my work and experience! If you like what you see and have project you need coded, don’t hesistate to contact me.</p>
 					<a href="#" class="resume-link">Get resume</a>
-				</section>
-
-				<section class="tech-and-skills">
+					</section>
+					<section class="tech-and-skills">
 					<div class="group">
 						<h2 class="heading">Languages</h2>
 						<div class="stack language-stack">
@@ -144,7 +146,8 @@
 							<span class="item">Bash</span>
 						</div>
 					</div>
-				</section>
+					</section>
+				</div>
 			</div>
 		</main>
 		<footer>
