Add CSS for the footer desktop view

--- a/index.html
+++ b/index.html
@@ -155,16 +155,18 @@
 				<h2 class="heading">Interested in collaborating?</h2>
 				<p>If you have an application you are interested in developing, a feature that you need built or a project that need coding, I’d love to help you with it.</p>
 				<form action="get" class="contact-form">
-					<div class="form-group">
+					<div class="form-group-flex">
+						<div class="form-group">
 						<input type="text" name="" id="fullName" class="form-control full-name" required placeholder="Full Name*">
 						<div class="invalid-feedback">
 							Please provide your name.
 						</div>
-					</div>
-					<div class="form-group">
+						</div>
+						<div class="form-group">
 						<input type="email" name="" id="emailAddress" class="form-control email-address" required placeholder="Email*">
 						<div class="invalid-feedback">
 							Please provide your email address.
+						</div>
 						</div>
 					</div>
 					<div class="form-group">
