--- a/index.html
+++ b/index.html
@@ -1,62 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>Jelil Faisal Abudu</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-		/>
-		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-		<script src="https://kit.fontawesome.com/53c96baea8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/stylesheets/styles.css" />
-  </head>
-  <body>
-    <header class="navbar site-header sticky-top py-1">
-			<h1 class=""></h1>
-      <div class="container-fluid">
-        <a class="navbar-brand float-left" href="#intro" aria-label="site-logo">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            class="d-block mx-auto"
-            role="img"
-            view-box="0 0 24 24"
-            focusable="false"
-          >
-            <title>Product</title>
-            <circle cx="12" cy="12" r="10" />
-            <path
-              d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"
-            />
-          </svg>
-        </a>
-        <nav class="nav flex-row float-right">
-          <a class="nav-link active d-none d-md-inline-block" href="#intro">
-						Intro
-					</a>
-          <a class="nav-link d-md-inline-block" href="#portfolio">Portfolio</a>
-          <a class="nav-link d-md-inline-block" href="#about">About</a>
-          <a class="nav-link d-md-inline-block" href="#contact">Contact</a>
-        </nav>
-      </div>
-		</header>
-		<main>
-			<div class="container-fluid">
-				<div class="upper-section bg-deco-right">
-					<section class="intro">
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<title>Jelil Faisal Abudu</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/53c96baea8.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="assets/stylesheets/styles.css" />
+</head>
+
+<body>
+	<header class="navbar site-header sticky-top py-1">
+		<h1 class=""></h1>
+		<div class="container-fluid">
+			<a class="navbar-brand float-left" href="#intro" aria-label="site-logo">
+				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
+					stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img"
+					view-box="0 0 24 24" focusable="false">
+					<title>Product</title>
+					<circle cx="12" cy="12" r="10" />
+					<path
+						d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94" />
+				</svg>
+			</a>
+			<nav class="nav flex-row float-right">
+				<a class="nav-link active d-none d-md-inline-block" href="#intro">
+					&lt;Intro/&gt;
+				</a>
+				<a class="nav-link d-md-inline-block" href="#portfolio">Portfolio</a>
+				<a class="nav-link d-md-inline-block" href="#about">About</a>
+				<a class="nav-link d-md-inline-block" href="#contact">Contact</a>
+			</nav>
+		</div>
+	</header>
+	<main>
+		<div class="container-fluid">
+			<div class="upper-section bg-deco-right">
+
+				<section class="intro">
 					<div class="hand-container">
 						<img src="assets/images/hand.svg" alt="hand" class="hand">
 					</div>
@@ -64,7 +48,9 @@
 						<h2 class="name">Jelil Abudu</h2>
 					</div>
 					<div class="background-info">
-						<p>Hello I am a software developer!  I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have project you need coded, don’t hesistate to contact me.</p>
+						<p>Hello I am a software developer! I can help you build a product, feature or website. Look through some of
+							my work and experience! If you like what you see and have project you need coded, don’t hesistate to
+							contact me.</p>
 					</div>
 					<div class="social-network">
 						<h2 class="heading social-network-heading">
@@ -91,13 +77,14 @@
 							</a>
 						</div>
 					</div>
-					</section>
-					<section class="portfolio-section">
+				</section>
+				<section class="portfolio-section">
 					<div class="portfolio">
 						<h2 class="heading section-heading">My best works</h2>
 						<div class="portfolio-items-group">
 							<figure>
-								<img class="project-screenshot img-fluid" src="assets/images/project_screenshot.png" alt="project_screenshot">
+								<img class="project-screenshot img-fluid" src="assets/images/project_screenshot.png"
+									alt="project_screenshot">
 								<figcaption class="caption">Caption</figcaption>
 							</figure>
 							<div class="built-tools">
@@ -108,15 +95,16 @@
 							<button class="see-project-button">See project</button>
 						</div>
 					</div>
-					</section>
-				</div>
-				<div class="lower-section">
-					<section class="about-me">
+				</section>
+			</div>
+			<div class="lower-section">
+				<section class="about-me">
 					<h2 class="section-heading">About me</h2>
-					<p>In three sentences describe who you are as a proffessional. Look through some of my work and experience! If you like what you see and have project you need coded, don’t hesistate to contact me.</p>
+					<p>In three sentences describe who you are as a proffessional. Look through some of my work and experience! If
+						you like what you see and have project you need coded, don’t hesistate to contact me.</p>
 					<a href="#" class="resume-link">Get resume</a>
-					</section>
-					<section class="tech-and-skills">
+				</section>
+				<section class="tech-and-skills">
 					<div class="group">
 						<h2 class="heading">Languages</h2>
 						<div class="stack language-stack">
@@ -146,87 +134,85 @@
 							<span class="item">Bash</span>
 						</div>
 					</div>
-					</section>
-				</div>
+				</section>
 			</div>
-		</main>
-		<footer>
-			<div class="container-fluid">
-				<h2 class="heading">Interested in collaborating?</h2>
-				<p>If you have an application you are interested in developing, a feature that you need built or a project that need coding, I’d love to help you with it.</p>
-				<form action="get" class="contact-form">
-					<div class="form-group-flex">
-						<div class="form-group">
+		</div>
+	</main>
+	<footer>
+		<div class="container-fluid">
+			<h2 class="heading">Interested in collaborating?</h2>
+			<p>If you have an application you are interested in developing, a feature that you need built or a project that
+				need coding, I’d love to help you with it.</p>
+			<form action="get" class="contact-form">
+				<div class="form-group-flex">
+					<div class="form-group">
 						<input type="text" name="" id="fullName" class="form-control full-name" required placeholder="Full Name*">
 						<div class="invalid-feedback">
 							Please provide your name.
 						</div>
-						</div>
-						<div class="form-group">
-						<input type="email" name="" id="emailAddress" class="form-control email-address" required placeholder="Email*">
+					</div>
+					<div class="form-group">
+						<input type="email" name="" id="emailAddress" class="form-control email-address" required
+							placeholder="Email*">
 						<div class="invalid-feedback">
 							Please provide your email address.
 						</div>
-						</div>
-					</div>
-					<div class="form-group">
-						<textarea name="" id="message" cols="30" rows="6" class="form-control" placeholder="message*" required></textarea>
-						<div class="invalid-feedback">
-							Please provide your message..
-						</div>
-					</div>
-					<div class="form-group">
-						<button type="submit" class="btn submit-btn btn-block">Get in touch</button>
-					</div>
-				</form>
-				<div class="social-network">
-					<address>
-						<a href="mailto:abudujelilfaisal@gmail.com" class="email-address">
-							abudujelilfaisal@gmail.com
-						</a>
-						</address> 
-					<div class="social-network-nav">
-						<a href="#" class="social-newwork-nav-link">
-							<i class="fab fa-github fa-2x"></i>
-						</a>
-						<a href="#" class="social-newwork-nav-link">
-							<i class="fab fa-twitter fa-2x"></i>
-						</a>
-						<a href="#" class="social-newwork-nav-link">
-							<i class="fab fa-linkedin-in fa-2x"></i>
-						</a>
-						<a href="#" class="social-newwork-nav-link">
-							<i class="fab fa-medium fa-2x"></i>
-						</a>
-						<a href="#" class="social-newwork-nav-link">
-							<i class="fab fa-stack-overflow fa-2x"></i>
-						</a>
-						<a href="#" class="social-newwork-nav-link">
-							<i class="fab fa-facebook fa-2x"></i>
-						</a>
 					</div>
 				</div>
-				<small class="copyright">
-					<i class="far fa-copyright"></i>
-					2020 
-				</small>
+				<div class="form-group">
+					<textarea name="" id="message" cols="30" rows="6" class="form-control" placeholder="message*"
+						required></textarea>
+					<div class="invalid-feedback">
+						Please provide your message..
+					</div>
+				</div>
+				<div class="form-group">
+					<button type="submit" class="btn submit-btn btn-block">Get in touch</button>
+				</div>
+			</form>
+			<div class="social-network">
+				<address>
+					<a href="mailto:abudujelilfaisal@gmail.com" class="email-address">
+						abudujelilfaisal@gmail.com
+					</a>
+				</address>
+				<div class="social-network-nav">
+					<a href="#" class="social-newwork-nav-link">
+						<i class="fab fa-github fa-2x"></i>
+					</a>
+					<a href="#" class="social-newwork-nav-link">
+						<i class="fab fa-twitter fa-2x"></i>
+					</a>
+					<a href="#" class="social-newwork-nav-link">
+						<i class="fab fa-linkedin-in fa-2x"></i>
+					</a>
+					<a href="#" class="social-newwork-nav-link">
+						<i class="fab fa-medium fa-2x"></i>
+					</a>
+					<a href="#" class="social-newwork-nav-link">
+						<i class="fab fa-stack-overflow fa-2x"></i>
+					</a>
+					<a href="#" class="social-newwork-nav-link">
+						<i class="fab fa-facebook fa-2x"></i>
+					</a>
+				</div>
 			</div>
-		</footer>
+			<small class="copyright">
+				<i class="far fa-copyright"></i>
+				2020
+			</small>
+		</div>
+	</footer>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+		integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+	</script>
+</body>
+
 </html>
