Add main screenshot contents to the portfolio section

--- a/index.html
+++ b/index.html
@@ -81,18 +81,71 @@
 				<section class="portfolio-section">
 					<div class="portfolio">
 						<h2 class="heading section-heading">My best works</h2>
-						<div class="portfolio-items-group">
-							<figure>
-								<img class="project-screenshot img-fluid" src="assets/images/project_screenshot.png"
-									alt="project_screenshot">
-								<figcaption class="caption">Caption</figcaption>
-							</figure>
-							<div class="built-tools">
-								<span class="tool">HTML/CSS</span>
-								<span class="tool">Ruby on Rails</span>
-								<span class="tool">JavaScript</span>
+						<div class="row">
+							<div class="portfolio-items-group col col-md-6">
+								<figure>
+									<img class="project-screenshot img-fluid" src="assets/images/school_hub_main.png"
+										alt="project_screenshot">
+									<figcaption class="caption">Caption</figcaption>
+								</figure>
+								<div class="built-tools">
+									<span class="tool">HTML/CSS</span>
+									<span class="tool">Ruby on Rails</span>
+									<span class="tool">JavaScript</span>
+								</div>
+								<button class="see-project-button">See project</button>
 							</div>
-							<button class="see-project-button">See project</button>
+							<div class="portfolio-items-group col col-md-6">
+								<figure>
+									<img class="project-screenshot img-fluid" src="assets/images/tnw_main.png">
+									<figcaption class="caption">Caption</figcaption>
+								</figure>
+								<div class="built-tools">
+									<span class="tool">HTML/CSS</span>
+									<span class="tool">Ruby on Rails</span>
+									<span class="tool">JavaScript</span>
+								</div>
+								<button class="see-project-button">See project</button>
+							</div>
+							<div class="portfolio-items-group col col-md-4">
+								<figure>
+									<img class="project-screenshot img-fluid" src="assets/images/tnw_main.png"
+										alt="project_screenshot">
+									<figcaption class="caption">Caption</figcaption>
+								</figure>
+								<div class="built-tools">
+									<span class="tool">HTML/CSS</span>
+									<span class="tool">Ruby on Rails</span>
+									<span class="tool">JavaScript</span>
+								</div>
+								<button class="see-project-button">See project</button>
+							</div>
+							<div class="portfolio-items-group col col-md-4">
+								<figure>
+									<img class="project-screenshot img-fluid" src="assets/images/using_bootstrap.png"
+										alt="project_screenshot">
+									<figcaption class="caption">Caption</figcaption>
+								</figure>
+								<div class="built-tools">
+									<span class="tool">HTML/CSS</span>
+									<span class="tool">Ruby on Rails</span>
+									<span class="tool">JavaScript</span>
+								</div>
+								<button class="see-project-button">See project</button>
+							</div>
+							<div class="portfolio-items-group col col-md-4">
+								<figure>
+									<img class="project-screenshot img-fluid" src="assets/images/nyt_main.png"
+										alt="project_screenshot">
+									<figcaption class="caption">Caption</figcaption>
+								</figure>
+								<div class="built-tools">
+									<span class="tool">HTML/CSS</span>
+									<span class="tool">Ruby on Rails</span>
+									<span class="tool">JavaScript</span>
+								</div>
+								<button class="see-project-button">See project</button>
+							</div>
 						</div>
 					</div>
 				</section>
