--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<div class="portfolio">
 						<h2 class="heading section-heading">My best works</h2>
 						<div class="row">
-							<div class="portfolio-items-group col col-md-6">
+							<div class="portfolio-items-group col-12 col-md-6">
 								<figure>
 									<img class="project-screenshot img-fluid" src="assets/images/school_hub_main.png"
 										alt="project_screenshot">
@@ -95,7 +95,7 @@
 								</div>
 								<button class="see-project-button">See project</button>
 							</div>
-							<div class="portfolio-items-group col col-md-6">
+							<div class="portfolio-items-group col-12 col-md-6">
 								<figure>
 									<img class="project-screenshot img-fluid" src="assets/images/tnw_main.png">
 									<figcaption class="caption">Caption</figcaption>
@@ -107,7 +107,7 @@
 								</div>
 								<button class="see-project-button">See project</button>
 							</div>
-							<div class="portfolio-items-group col col-md-4">
+							<div class="portfolio-items-group col-12 col-md-4">
 								<figure>
 									<img class="project-screenshot img-fluid" src="assets/images/tnw_main.png"
 										alt="project_screenshot">
@@ -120,7 +120,7 @@
 								</div>
 								<button class="see-project-button">See project</button>
 							</div>
-							<div class="portfolio-items-group col col-md-4">
+							<div class="portfolio-items-group col-12 col-md-4">
 								<figure>
 									<img class="project-screenshot img-fluid" src="assets/images/using_bootstrap.png"
 										alt="project_screenshot">
@@ -133,7 +133,7 @@
 								</div>
 								<button class="see-project-button">See project</button>
 							</div>
-							<div class="portfolio-items-group col col-md-4">
+							<div class="portfolio-items-group col-12 col-md-4">
 								<figure>
 									<img class="project-screenshot img-fluid" src="assets/images/nyt_main.png"
 										alt="project_screenshot">
