--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
       </div>
     </div>
 
-    <div class="modal fade" id="nytModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="nytModal" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
       aria-hidden="true">
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -238,7 +238,15 @@
                 </span>
               </a>
               </div>
-              
+              <div class="project-desc">
+                <h2 class="section-heading">SchoolHub</h2>
+                <div class="built-tools">
+                  <span class="tool">HTML/CSS</span>
+                  <span class="tool">Ruby on Rails</span>
+                  <span class="tool">JavaScript</span>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
             </div>
           </div>
           
