Update the css and the html files

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="row">
               <div class="portfolio-items-group col-12 col-md-6">
                 <figure>
-                  <img class="project-screenshot img-fluid" src="assets/images/school_hub_main.png"
+                  <img class="project-screenshot img-fluid" src="assets/images/school_hub_main_preview_rev_1.png"
                     alt="project_screenshot" />
                   <figcaption class="caption">Caption</figcaption>
                 </figure>
@@ -209,7 +209,7 @@
 
     <div class="modal fade" id="nytModal" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
       aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-dialog" role="document">
         <div class="modal-content">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -220,8 +220,8 @@
               <div class="small-pics-and-btn-wrapper">
               <div class="small-pics-wrapper row">
                 <img src="assets/images/sch_hub_deatil_sm.png" alt="" class="small-pic col-4">
-                <img src="assets/images/sch_hub_deatil_sm.png" alt="" class="small-pic col-4">
-                <img src="assets/images/sch_hub_deatil_sm.png" alt="" class="small-pic col-4">
+                <img src="assets/images/sch_hub_detail_sm2.png" alt="" class="small-pic col-4">
+                <img src="assets/images/sch_hub_detail_sm3.png" alt="" class="small-pic col-4">
               </div>
               </div>
               <div class="buttons-wrapper">
