Use JS to change the navbar background on scroll top

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header class="navbar site-header sticky-top py-1">
+  <header id="navBar" class="navbar site-header sticky-top">
     <h1 class=""></h1>
     <div class="container-fluid">
       <a class="navbar-brand float-left" href="#intro" aria-label="site-logo">
@@ -331,6 +331,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
   </script>
+  <script src="index.js"></script>
 </body>
 
 </html>
