Change the photos' background

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <div class="row">
               <div class="portfolio-items-group col-12 col-md-6">
                 <figure>
-                  <img class="project-screenshot img-fluid" src="assets/images/school_hub_main_preview_rev_1.png"
+                  <img class="project-screenshot img-fluid" src="assets/images/school_hub_main_removebg-preview.png"
                     alt="project_screenshot" />
-                  <figcaption class="caption">Caption</figcaption>
+                  <figcaption class="caption">SchoolHubs</figcaption>
                 </figure>
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
@@ -102,7 +102,7 @@
               </div>
               <div class="portfolio-items-group col-12 col-md-6">
                 <figure>
-                  <img class="project-screenshot img-fluid" src="assets/images/tnw_main.png" />
+                  <img class="project-screenshot img-fluid" src="assets/images/using_bootstrap-removebg-preview.png" />
                   <figcaption class="caption">Caption</figcaption>
                 </figure>
                 <div class="built-tools">
@@ -130,7 +130,7 @@
               </div>
               <div class="portfolio-items-group col-12 col-md-4">
                 <figure>
-                  <img class="project-screenshot img-fluid" src="assets/images/using_bootstrap.png"
+                  <img class="project-screenshot img-fluid" src="assets/images/tnw_main-removebg-preview.png"
                     alt="project_screenshot" />
                   <figcaption class="caption">News Week Clone</figcaption>
                 </figure>
