--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
             </h2>
             <div class="social-network-nav">
               <a href="#" class="social-newwork-nav-link">
-                <i class="fab fa-github fa-2x"></i>
+                <i class="icon fab fa-github fa-2x"></i>
               </a>
               <a href="#" class="social-newwork-nav-link">
-                <i class="fab fa-twitter fa-2x"></i>
+                <i class="icon fab fa-twitter fa-2x"></i>
               </a>
               <a href="#" class="social-newwork-nav-link">
-                <i class="fab fa-linkedin-in fa-2x"></i>
+                <i class="icon fab fa-linkedin-in fa-2x"></i>
               </a>
               <a href="#" class="social-newwork-nav-link">
-                <i class="fab fa-medium fa-2x"></i>
+                <i class="icon fab fa-medium fa-2x"></i>
               </a>
               <a href="#" class="social-newwork-nav-link">
-                <i class="fab fa-stack-overflow fa-2x"></i>
+                <i class="icon fab fa-stack-overflow fa-2x"></i>
               </a>
               <a href="#" class="social-newwork-nav-link">
-                <i class="fab fa-facebook fa-2x"></i>
+                <i class="icon fab fa-facebook fa-2x"></i>
               </a>
             </div>
           </div>
