--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </a>
         <a class="nav-link d-md-inline-block" href="#portfolio">Portfolio</a>
         <a class="nav-link d-md-inline-block" href="#about">About</a>
-        <a class="nav-link d-md-inline-block" href="#contact">Contact</a>
+        <a class="nav-link d-md-inline-block pr-0" href="#contact">Contact</a>
       </nav>
     </div>
   </header>
