Add social network links

--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
               My works in the social networks
             </h2>
             <div class="social-network-nav">
-              <a href="#" class="social-newwork-nav-link">
+              <a href="https://github.com/JelilFaisalAbudu" class="social-newwork-nav-link">
                 <i class="icon fab fa-github fa-2x"></i>
               </a>
-              <a href="#" class="social-newwork-nav-link">
+              <a href="https://twitter.com/jelilabudu" class="social-newwork-nav-link">
                 <i class="icon fab fa-twitter fa-2x"></i>
               </a>
-              <a href="#" class="social-newwork-nav-link">
+              <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-newwork-nav-link">
                 <i class="icon fab fa-linkedin-in fa-2x"></i>
               </a>
-              <a href="#" class="social-newwork-nav-link">
+              <a href="https://medium.com/@abudujelilfaisal" class="social-newwork-nav-link">
                 <i class="icon fab fa-medium fa-2x"></i>
               </a>
-              <a href="#" class="social-newwork-nav-link">
+              <a href="https://stackoverflow.com/users/13828331/jelilabudufaisal" class="social-newwork-nav-link">
                 <i class="icon fab fa-stack-overflow fa-2x"></i>
               </a>
-              <a href="#" class="social-newwork-nav-link">
+              <a href="https://web.facebook.com/abudu.jelilfaisal/" class="social-newwork-nav-link">
                 <i class="icon fab fa-facebook fa-2x"></i>
               </a>
             </div>
@@ -103,7 +103,7 @@
               <div class="portfolio-items-group col-12 col-md-6">
                 <figure>
                   <img class="project-screenshot img-fluid" src="assets/images/using_bootstrap-removebg-preview.png" />
-                  <figcaption class="caption">Caption</figcaption>
+                  <figcaption class="caption">Newsweek Clone</figcaption>
                 </figure>
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
@@ -295,22 +295,22 @@
           </a>
         </address>
         <div class="social-network-nav">
-          <a href="#" class="social-newwork-nav-link">
+          <a href="https://github.com/JelilFaisalAbudu" class="social-newwork-nav-link">
             <i class="fab fa-github fa-2x"></i>
           </a>
-          <a href="#" class="social-newwork-nav-link">
+          <a href="https://twitter.com/jelilabudu" class="social-newwork-nav-link">
             <i class="fab fa-twitter fa-2x"></i>
           </a>
-          <a href="#" class="social-newwork-nav-link">
+          <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-newwork-nav-link">
             <i class="fab fa-linkedin-in fa-2x"></i>
           </a>
-          <a href="#" class="social-newwork-nav-link">
+          <a href="https://medium.com/@abudujelilfaisal" class="social-newwork-nav-link">
             <i class="fab fa-medium fa-2x"></i>
           </a>
-          <a href="#" class="social-newwork-nav-link">
+          <a href="https://stackoverflow.com/users/13828331/jelilabudufaisal" class="social-newwork-nav-link">
             <i class="fab fa-stack-overflow fa-2x"></i>
           </a>
-          <a href="#" class="social-newwork-nav-link">
+          <a href="https://web.facebook.com/abudu.jelilfaisal/" class="social-newwork-nav-link">
             <i class="fab fa-facebook fa-2x"></i>
           </a>
         </div>
