Add relative links  to the navbar items

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header id="navBar" class="navbar site-header sticky-top">
     <h1 class=""></h1>
     <div class="container-fluid">
-      <a class="navbar-brand float-left" href="#intro" aria-label="site-logo">
+      <a class="navbar-brand float-left" href="#home" aria-label="site-logo">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
           stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img"
           view-box="0 0 24 24" focusable="false">
@@ -31,7 +31,7 @@
           &lt;Intro/&gt;
         </a>
         <a class="nav-link d-md-inline-block" href="#portfolio">Portfolio</a>
-        <a class="nav-link d-md-inline-block" href="#about">About</a>
+        <a class="nav-link d-md-inline-block" href="#intro">About</a>
         <a class="nav-link d-md-inline-block pr-0" href="#contact">Contact</a>
       </nav>
     </div>
@@ -40,7 +40,7 @@
     <div class="upper-section bg-deco-right position-relative">
       <!-- <img src="assets/images/background_shapes_2_desktop.png" alt="" class="bg-deco-right"> -->
       <div class="container-fluid">
-        <section class="intro">
+        <section id="intro" class="intro">
           <div class="hand-container">
             <img src="assets/images/hand.svg" alt="hand" class="hand" />
           </div>
@@ -81,7 +81,7 @@
             </div>
           </div>
         </section>
-        <section class="portfolio-section">
+        <section id="portfolio" class="portfolio-section">
           <div class="portfolio">
             <h2 class="heading section-heading">My best works</h2>
             <div class="row">
@@ -263,7 +263,7 @@
         that you need built or a project that need coding, I’d love to help
         you with it.
       </p>
-      <form action="get" class="contact-form">
+      <form id="contact" action="get" class="contact-form">
         <div class="form-group-flex">
           <div class="form-group">
             <input type="text" name="" id="fullName" class="form-control full-name" required placeholder="Full Name*" />
