--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94" />
         </svg>
       </a>
-      <nav class="nav flex-row float-right">
+      <nav id="nav" class="nav flex-row float-right">
         <a class="nav-link active d-none d-md-inline-block" href="#intro">
           &lt;Intro/&gt;
         </a>
