Add content to SchooHub modal

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               Hello I am a software developer! I can help you build a product,
               feature or website. Look through some of my work and experience!
               If you like what you see and have project you need coded, don’t
-              hesistate to contact me.
+              hesitate to contact me.
             </p>
           </div>
           <div class="social-network">
@@ -93,10 +93,8 @@
                 </figure>
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
-                  <span class="tool">Ruby on Rails</span>
-                  <span class="tool">JavaScript</span>
                 </div>
-                <button class="see-project-button" data-toggle="modal" data-target="#schHubModal">
+                <button class="see-project-button" data-toggle="modal" data-target="#schoolHubModal">
                   See project
                 </button>
               </div>
@@ -206,7 +204,7 @@
       </div>
     </div>
 
-    <div class="modal fade" id="nytModal" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
+    <div class="modal fade" id="schoolHubModal" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -214,22 +212,22 @@
             <span aria-hidden="true">&times;</span>
           </button>
           <div class="modal-body row">
-            <img src="assets/images/sch_hub_detail_xl.png" alt="SchoolHub main photo" class="main-modal-img col-12">
+            <img src="assets/images/sch_hub_detail_xl.png" alt="SchoolHub main screenshot" class="main-modal-img col-12">
             <div class="content-wrapper col-12">
               <div class="small-pics-and-btn-wrapper">
               <div class="small-pics-wrapper row">
-                <img src="assets/images/sch_hub_deatil_sm.png" alt="" class="small-pic col-4">
-                <img src="assets/images/sch_hub_detail_sm2.png" alt="" class="small-pic col-4">
-                <img src="assets/images/sch_hub_detail_sm3.png" alt="" class="small-pic col-4">
+                <img src="assets/images/sch_hub_deatil_sm.png" alt="SchoolHub screenshot" class="small-pic col-4">
+                <img src="assets/images/sch_hub_detail_sm2.png" alt="SchoolHub Screenshot" class="small-pic col-4">
+                <img src="assets/images/sch_hub_detail_sm3.png" alt="SchoolHub Screenshot" class="small-pic col-4">
               </div>
               <div class="buttons-wrapper">
-                <a href="#" class="btn btn-block">
+                <a href="https://raw.githack.com/JelilFaisalAbudu/html-and-css-capstone-school-directory/development/pages/school-details.html" class="btn btn-block">
                   <span class="text">see live</span>
                   <span class="icon">
                     <i class="fas fa-external-link-alt fa-2x"></i>
                   </span>
                 </a>
-                <a href="#" class="btn btn-block">
+                <a href="https://github.com/JelilFaisalAbudu/html-and-css-capstone-school-directory" class="btn btn-block">
                   <span class="text">see source</span>
                   <span class="icon">
                     <i class="fab fa-github fa-2x"></i>
@@ -242,10 +240,10 @@
                 <h2 class="section-heading">SchoolHub</h2>
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
-                  <span class="tool">Ruby on Rails</span>
-                  <span class="tool">JavaScript</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="pt-0">SchoolHub is a static web app that I've built using only HTML and CSS. It's both mobile and desktop responsive. I've built to present as my HTML/CSS assessment(capstone) project. I followed the requirements and the design specifications given by the assessment board of Microverse School.</p>
+
+                <p class="pt-0">The main goal SchoolHub app is to give the simplest means to both parents and guardians to search for the best basic schools for their wards to attend. Users can search for their target schools based on different categories. These include the geographical location of the school, the kind of curriculum the school is running, the accepted gender and much more. School proprietors can list their schools with the schools' profiles for easy identification.</p>
               </div>
             </div>
           </div>
