Add content to the newsweek modal

--- a/index.html
+++ b/index.html
@@ -118,10 +118,8 @@
                 </figure>
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
-                  <span class="tool">Ruby on Rails</span>
-                  <span class="tool">JavaScript</span>
                 </div>
-                <button class="see-project-button" data-toggle="modal" data-target="#tnwModal">
+                <button class="see-project-button" data-toggle="modal" data-target="#newsweekModal">
                   See project
                 </button>
               </div>
@@ -129,14 +127,12 @@
                 <figure>
                   <img class="project-screenshot img-fluid" src="assets/images/tnw_main-removebg-preview.png"
                     alt="project_screenshot" />
-                  <figcaption class="caption">News Week Clone</figcaption>
+                  <figcaption class="caption">Newsweek Clone</figcaption>
                 </figure>
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
-                  <span class="tool">Ruby on Rails</span>
-                  <span class="tool">JavaScript</span>
                 </div>
-                <button class="see-project-button" data-toggle="modal" data-target="#newsWeekModal">
+                <button class="see-project-button" data-toggle="modal" data-target="#newsweekModal">
                   See project
                 </button>
               </div>
@@ -291,6 +287,52 @@
                 </div>
                 <p class="pt-0">This web app is a desktop version of the popular social media network Twitter. It is an assessment(capstone) project that I've built to demonstrate mastery in the Ruby on Rails module of the Microverse curriculum after completing that particular module.</p>
                 <p class="pt-0">The requirements and the design specification were given by the assessment team of Microverse. The user logs in to the app, only by typing the username (a complex authenticated login is not a requirement). After the user has successfully logged in, he or she has can use a simple form to write and post a tweet. Every logged in user can view other users' profile and follow them. You can also stop following any user you previously follow. Your feed section always get updated by the posts of all the users you are following including yours(sorted by most-recent).</p>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="newsweekModal" tabindex="-1" role="dialog" aria-labelledby="Newsweek Clone"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <div class="modal-body row">
+            <img src="assets/images/newsweek_detail1.png" alt="Newsweek clone screenshot" class="main-modal-img col-12">
+            <div class="content-wrapper col-12">
+              <div class="small-pics-and-btn-wrapper">
+              <div class="small-pics-wrapper row">
+                <img src="assets/images/newsweek_detail2.png" alt="Newsweek Clone Screenshot" class="small-pic col-4">
+                <img src="assets/images/newsweek_detail3.png" alt="Newsweek Clone screenshot" class="small-pic col-4">
+                <img src="assets/images/newsweek_detail4.png" alt="Twitter Redesign Screenshot" class="small-pic col-4">
+              </div>
+              <div class="buttons-wrapper">
+                <a href="https://raw.githack.com/JelilFaisalAbudu/using-bootstrap/development/index.html" class="btn btn-block">
+                  <span class="text">see live</span>
+                  <span class="icon">
+                    <i class="fas fa-external-link-alt fa-2x"></i>
+                  </span>
+                </a>
+                <a href="https://github.com/JelilFaisalAbudu/using-bootstrap" class="btn btn-block">
+                  <span class="text">see source</span>
+                  <span class="icon">
+                    <i class="fab fa-github fa-2x"></i>
+                  </span>
+                </a>
+                </div>
+              </div>
+              
+              <div class="project-desc">
+                <h2 class="section-heading">Newsweek Clone</h2>
+                <div class="built-tools">
+                  <span class="tool">HTML/CSS</span>
+                  <span class="tool">Bootstrap</span>
+                </div>
+                <p class="pt-0">The Newsweek Clone is complex web app that I've built using the Bootstrap CSS framework. I used the design from the original Newsweek website due to it complex layout. The web app is fully responsive on both desktop and mobile.</p>
               </div>
             </div>
           </div>
