Remove comment codes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
   </header>
   <main>
     <div class="upper-section bg-deco-right position-relative">
-      <!-- <img src="assets/images/background_shapes_2_desktop.png" alt="" class="bg-deco-right"> -->
       <div class="container-fluid">
         <section id="intro" class="intro">
           <div class="hand-container">
@@ -60,22 +59,22 @@
               My works in the social networks
             </h2>
             <div class="social-network-nav">
-              <a href="https://github.com/JelilFaisalAbudu" class="social-newwork-nav-link">
+              <a href="https://github.com/JelilFaisalAbudu" class="social-network-nav-link">
                 <i class="icon fab fa-github fa-2x"></i>
               </a>
-              <a href="https://twitter.com/jelilabudu" class="social-newwork-nav-link">
+              <a href="https://twitter.com/jelilabudu" class="social-network-nav-link">
                 <i class="icon fab fa-twitter fa-2x"></i>
               </a>
-              <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-newwork-nav-link">
+              <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-network-nav-link">
                 <i class="icon fab fa-linkedin-in fa-2x"></i>
               </a>
-              <a href="https://medium.com/@abudujelilfaisal" class="social-newwork-nav-link">
+              <a href="https://medium.com/@abudujelilfaisal" class="social-network-nav-link">
                 <i class="icon fab fa-medium fa-2x"></i>
               </a>
               <a href="https://stackoverflow.com/users/13828331/jelilabudufaisal" class="social-newwork-nav-link">
                 <i class="icon fab fa-stack-overflow fa-2x"></i>
               </a>
-              <a href="https://web.facebook.com/abudu.jelilfaisal/" class="social-newwork-nav-link">
+              <a href="https://web.facebook.com/abudu.jelilfaisal/" class="social-network-nav-link">
                 <i class="icon fab fa-facebook fa-2x"></i>
               </a>
             </div>
