--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <a href="https://medium.com/@abudujelilfaisal" class="social-network-nav-link">
                 <i class="icon fab fa-medium fa-2x"></i>
               </a>
-              <a href="https://stackoverflow.com/users/13828331/jelilabudufaisal" class="social-newwork-nav-link">
+              <a href="https://stackoverflow.com/users/13828331/jelilabudufaisal" class="social-network-nav-link">
                 <i class="icon fab fa-stack-overflow fa-2x"></i>
               </a>
               <a href="https://web.facebook.com/abudu.jelilfaisal/" class="social-network-nav-link">
@@ -86,19 +86,6 @@
             <div class="row">
               <div class="portfolio-items-group col-12 col-md-6">
                 <figure>
-                  <img class="project-screenshot img-fluid" src="assets/images/school_hub_main_removebg-preview.png"
-                    alt="project_screenshot" />
-                  <figcaption class="caption">SchoolHubs</figcaption>
-                </figure>
-                <div class="built-tools">
-                  <span class="tool">HTML/CSS</span>
-                </div>
-                <button class="see-project-button" data-toggle="modal" data-target="#schoolHubModal">
-                  See project
-                </button>
-              </div>
-              <div class="portfolio-items-group col-12 col-md-6">
-                <figure>
                   <img class="project-screenshot img-fluid" src="assets/images/twitter_redesign_main-removebg-preview.png" />
                   <figcaption class="caption">Twitter Redesign</figcaption>
                 </figure>
@@ -107,6 +94,19 @@
                   <span class="tool">Ruby on Rails</span>
                 </div>
                 <button type="button" class="see-project-button" data-toggle="modal" data-target="#twitterRedesignModal">
+                  See project
+                </button>
+              </div>
+              <div class="portfolio-items-group col-12 col-md-6">
+                <figure>
+                  <img class="project-screenshot img-fluid" src="assets/images/school_hub_main_removebg-preview.png"
+                    alt="project_screenshot" />
+                  <figcaption class="caption">SchoolHubs</figcaption>
+                </figure>
+                <div class="built-tools">
+                  <span class="tool">HTML/CSS</span>
+                </div>
+                <button class="see-project-button" data-toggle="modal" data-target="#schoolHubModal">
                   See project
                 </button>
               </div>
@@ -159,9 +159,9 @@
         <section id="about" class="scroll-check about-me">
           <h2 class="section-heading">About me</h2>
           <p>
-            In three sentences describe who you are as a proffessional. Look
+            In three sentences describe who you are as a professional. Look
             through some of my work and experience! If you like what you see and
-            have project you need coded, don’t hesistate to contact me.
+            have project you need coded, don’t hesitate to contact me.
           </p>
           <a href="#" class="resume-link">Get resume</a>
         </section>
@@ -380,22 +380,22 @@
           </a>
         </address>
         <div class="social-network-nav">
-          <a href="https://github.com/JelilFaisalAbudu" class="social-newwork-nav-link">
+          <a href="https://github.com/JelilFaisalAbudu" class="social-network-nav-link">
             <i class="fab fa-github fa-2x"></i>
           </a>
-          <a href="https://twitter.com/jelilabudu" class="social-newwork-nav-link">
+          <a href="https://twitter.com/jelilabudu" class="social-network-nav-link">
             <i class="fab fa-twitter fa-2x"></i>
           </a>
-          <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-newwork-nav-link">
+          <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-network-nav-link">
             <i class="fab fa-linkedin-in fa-2x"></i>
           </a>
-          <a href="https://medium.com/@abudujelilfaisal" class="social-newwork-nav-link">
+          <a href="https://medium.com/@abudujelilfaisal" class="social-network-nav-link">
             <i class="fab fa-medium fa-2x"></i>
           </a>
-          <a href="https://stackoverflow.com/users/13828331/jelilabudufaisal" class="social-newwork-nav-link">
+          <a href="https://stackoverflow.com/users/13828331/jelilabudufaisal" class="social-network-nav-link">
             <i class="fab fa-stack-overflow fa-2x"></i>
           </a>
-          <a href="https://web.facebook.com/abudu.jelilfaisal/" class="social-newwork-nav-link">
+          <a href="https://web.facebook.com/abudu.jelilfaisal/" class="social-network-nav-link">
             <i class="fab fa-facebook fa-2x"></i>
           </a>
         </div>
