Remove multiple blank lines

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 </figure>
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
+                  <span class="tool">Bootstrap</span>
                 </div>
                 <button class="see-project-button" data-toggle="modal" data-target="#newsweekModal">
                   See project
